[package]
name = "scraped_to_posts"
version = "0.1.0"
authors = ["Daniel Mason"]

[dependencies]
chrono = { version = "^0.4.6", features = ["serde"] }
diesel = { version = "^1.4", features = ["mysql", "chrono", "r2d2"] }
dotenv="0.14"
env_logger = "^0.6.1"
failure = "^0.1.1"
log = "^0.4.6"
r2d2 = "^0.8.4"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
